# finally

./: .gitignore  Dockerfile  README.md
.claude/: settings.json
backend/: pyproject.toml
backend/db/: schema.sql  seed.sql
backend/src/: app.py
backend/src/database/: __init__.py  db.py  queries.py
backend/src/llm/: __init__.py  chat.py  mock.py  models.py  prompts.py
backend/src/market/: __init__.py  cache.py  engine.py  factory.py  interface.py  massive_client.py  models.py  seed_prices.py  simulator.py  sse.py
backend/src/routes/: chat.py  portfolio.py  watchlist.py
backend/tests/: test_cache.py  test_database.py  test_engine.py  test_factory.py  test_llm.py  test_massive_client.py  test_models.py  test_routes.py  test_simulator.py  test_sse.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatPanel.tsx  Header.tsx  Heatmap.tsx  PnlChart.tsx  PositionsTable.tsx  Sparkline.tsx  TickerChart.tsx  TradeBar.tsx  Watchlist.tsx
planning/: MARKET_DATA_SUMMARY.md
planning/archive/: MARKET_DATA_DESIGN.md  MARKET_DATA_REVIEW.md
scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
test/: docker-compose.test.yml  package-lock.json  package.json  playwright.config.ts
test/playwright-report/: index.html
test/specs/: chat.spec.ts  fresh-start.spec.ts  portfolio.spec.ts  sse.spec.ts  trading.spec.ts  watchlist.spec.ts
